--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --inspect=0.0.0.0",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
-  },
-  "devDependencies": {
-    "eslint": "^4.15.0"
+    "test": "jest",
+    "lint": "eslint .",
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly ./app.ts",
+    "prod": "tsc && node ./built/src/app.js",
+    "debug": "tsc && node --inspect ./built/src/app.js"
   },
   "author": "devSolution",
   "license": "ISC",
@@ -19,5 +20,19 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^4.15.0",
+    "@types/body-parser": "^1.19.0",
+    "@types/eslint": "^7.2.0",
+    "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.36",
+    "@types/nodemon": "^1.19.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint-config-airbnb-typescript": "^9.0.0",
+    "ts-jest": "^26.2.0",
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.58"
   }
 }
