implement typescript with my app

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,20 +1,41 @@
 {
-    "compilerOptions": {
-      "sourceMap": true,
+  "compilerOptions": {
+      "module": "commonjs",
       "esModuleInterop": true,
-      "allowJs": true,
+      "target": "es6",
       "noImplicitAny": true,
       "moduleResolution": "node",
-      "lib": ["es2018"],
-      "module": "commonjs",
-      "target": "es2018",
+      "sourceMap": true,
+    //   "outDir": "dist",
       "baseUrl": ".",
       "paths": {
-        "*": ["node_modules/*", "src/types/*"]
-      },
-      "typeRoots": ["node_modules/@types", "src/types"],
-      "outDir": "./built"
-    },
-    "include": ["./src/**/*", "jest.config.js"],
-    "exclude": ["node_modules"]
+          "*": [
+              "node_modules/*"
+          ]
+      }
+  },
+  "include": [
+      "src/**/*"
+  ]
 }
+// {
+//     "compilerOptions": {
+//       "sourceMap": true,
+//       "esModuleInterop": true,
+//       "allowJs": true,
+//       "noImplicitAny": true,
+//       "moduleResolution": "node",
+//       "lib": ["es2018"],
+//       "module": "commonjs",
+//       "target": "es2018",
+//       "baseUrl": ".",
+//       "paths": {
+//         "*": ["node_modules/*", "src/types/*"]
+//       },
+//       "typeRoots": ["node_modules/@types", "src/types"],
+//       "outDir": "./built"
+//     },
+//     "include": ["./src/**/*", "jest.config.js"],
+//     "exclude": ["node_modules"],
+//     "allowSyntheticDefaultImports": true
+// }
