--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
+  "type": "module",
   "name": "nutrition",
   "version": "1.0.0",
   "description": "nutrition App Server",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "nodemon --inspect=0.0.0.0",
-    "test": "jest",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "start": "nodemon",
     "lint": "eslint .",
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./app.ts",
@@ -22,7 +23,6 @@
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
-    "eslint": "^4.15.0",
     "@types/body-parser": "^1.19.0",
     "@types/eslint": "^7.2.0",
     "@types/express": "^4.17.7",
@@ -33,6 +33,8 @@
     "eslint-config-airbnb-typescript": "^9.0.0",
     "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.58"
+    "ts-node-dev": "^1.0.0-pre.58",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.2"
   }
 }
