--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "name": "nutrition",
   "version": "1.0.0",
   "description": "nutrition App Server",
-  "main": "app.ts",
+  "main": "src/app.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "start": "nodemon",
@@ -20,7 +20,8 @@
     "eslint": "^7.7.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "ts-jest": "^26.2.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -30,8 +31,6 @@
     "@types/nodemon": "^1.19.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
-    "eslint-config-airbnb-typescript": "^9.0.0",
-    "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.58",
     "tslint": "^6.1.3",
